Completely restructure qml code for readability and ease of use.
Many regressions in functionality since singal/slot
handlers being updated in qml.

--- a/rosnetwork_master/grasper-gui/resources.qrc
+++ b/rosnetwork_master/grasper-gui/resources.qrc
@@ -1,5 +1,17 @@
 <RCC>
     <qresource prefix="/">
-        <file alias="main.qml">qml/main.qml</file>
+        <file>main.qml</file>
+        <file>qml/qmldir</file>
+        <file>qml/ColoredButton.qml</file>
+        <file>qml/Constants.qml</file>
+        <file>qml/Sidebar.qml</file>
+        <file>qml/CriticalErrorBanner.qml</file>
+        <file>qml/NoncriticalErrorBanner.qml</file>
+        <file>qml/HomeScreen.qml</file>
+        <file>qml/SwitchDelegateWithText.qml</file>
+        <file>qml/MeasurementPanel.qml</file>
+        <file>qml/MotorControlPanel.qml</file>
+        <file>qml/SensorReading.qml</file>
+        <file>qml/images/warning.png</file>
     </qresource>
 </RCC>
